preparing for production environment

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,12 +15,15 @@
         }
     </style>
 </head>
-<body><br><br>
+<body style="margin:0 40px;"><br><br>
     <h1>Welcome</h1>
-    <form action="{% url 'search' %}">
-        <input type="text" name="q" id="query"/>
-        <input type="submit" value="Search"/>
-    </form>
+    <div style="display: flex; justify-content: space-between;">
+        <form action="{% url 'search' %}">
+            <input type="text" name="q" id="query"/>
+            <input type="submit" value="Search"/>
+        </form>
+        <h4>hello {{ user.username }}</h4>
+    </div>
     <hr>
     <br>
     {%block content %}
