--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -17,10 +17,13 @@
 {% if not request.user.is_authenticated %}
     <form method="POST" action="">
         {% csrf_token %}
-        <input type="text" name="identifier" placeholder="Username or Email" required /><br><br>
-        <input type="password" name="password" placeholder="Password" required /><br><br>
+            {{ form.as_p }}
         <button type="submit">Login</button>
     </form>
+    <div>
+        <h2>Don't have an account yet? , would you like to Register?</h2><br>
+        <a href="{% url 'register' %}" style="margin: 3em; border: 1px solid black; padding: 1em 3em; text-decoration: none;">Register</a>
+    </div>
 {% else %}
     <div>
         <h2>You are already logged in, would you like to logout</h2><br>
